# AutoNotes-Pro

./: LICENSE  README.md  app.py  audio_transcriber.py  index.html  main.py  package-lock.json  pdfgen.py  pyproject.toml  qsgen.py  res.py  results.html  server.py  test.py  transcript.txt
my-app/: package-lock.json  package.json
my-app/app/: page.tsx
my-app/app/results/: page.tsx
static/: index.html  transcript.txt
