[project]
name = "autonotes-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "openai",
    'whisper',
    'pydub',
    'reportlab',
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.6.9",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.52.4",
    "torchvision>=0.22.1",
    "soundfile>=0.13.1",
    "fpdf>=1.7.2",
    "google-generativeai>=0.8.5",
]
