[project]
name = "autonotes-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "streamlit",
    "openai",
    'pydub',
    'reportlab',
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.6.9",
    "transformers>=4.52.4",
    "soundfile>=0.13.1",
    "fpdf>=1.7.2",
    "google-generativeai>=0.8.5",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "python-multipart>=0.0.20",
    "ollama>=0.5.1",
    "click>=8.2.1",
    "faster-whisper>=1.1.1",
]
